﻿v9.9.627 (2022-08-14)
- Fixed timebar update.
- Fixed Telia Play and CMore catchup session timeout.

v9.9.626 (2022-08-14)
- Fixed recording naming issues.
- Fixed dialog loop on catchup wrong type.

v9.9.625 (2022-07-15)
- Updated translations.
- Improved configuration tutorial.

v9.9.624 (2022-07-11)
- Fixed show Video OSD on touch tap.
- Fixed recording filename input return action.
- Bug fixes.

v9.9.623 (2022-07-10)
- Fixed recording filename match.

v9.9.622 (2022-07-10)
- Hotfix.

v9.9.621 (2022-07-09)
- Bug fixes.
- Fixed memory leaks.

v9.9.620 (2022-07-08)
- Added filename input for downloads and recordings.
- Other improvements.
- Bug fixes.

v9.9.619 (2022-07-07)
- Added overview guide window shourtcut.
- Database optimizations.

v9.9.618 (2022-07-02)
- Hotfix.

v9.9.617 (2022-07-02)
- Added overview guide window during playback.
- Fixed mktime overflow error.
- Optimized performance.

v9.9.616 (2022-06-25)
- Fixed cached playlists channel mismatching.

v9.9.615 (2022-06-20)
- Bug fixes.
- Fixed categories sortings.
- Fixed playlist channel matching.
- Optimized performance.

v9.9.614 (2022-06-16)
- Fixed service PlayerPL login.
- Added option to manually assign adult and vod EPG URL.
- Other fixes.

v9.9.613 (2022-06-11)
- Fixed playlists load error.

v9.9.612 (2022-06-10)
- Hotfix.

v9.9.611 (2022-06-06)
- Fixed login for services C More and Telia Play.

v9.9.610 (2022-06-05)
- Hotfix.

v9.9.609 (2022-06-05)
- Fixed exception error while adding missing channels.
- Fixed grouping error.
- Fixed login for services C More and Telia Play.

v9.9.608 (2022-05-26)
- Hotfix.

v9.9.607 (2022-05-26)
- Updated translations.
- Bug fixes.

v9.9.606 (2022-05-22)
- Optimized performance.
- Bug fixes.

v9.9.605 (2022-05-09)
- Fixed channel listing for service CMore.
- Bug fixes.

v9.9.604 (2022-05-05)
- Added support for TheMovieDb extended information.
- Fixed service CMore.

v9.9.603 (2022-04-24)
- Fixed service Polsat GO.
- Updated translations.
